[package]
name = "flame_graph_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
inferno = { version = "0.12.2", features = ["cli"] }
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
futures = "0.3"
clap = { version = "4.4", features = ["derive"] }